# HurtBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ask_rag.py  docker-compose.yml  frontend.py  function_app.py  ingest_all.py  ingest_products.py  products.json  pyproject.toml  requirements.txt
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: ci.yml
HurtBotFunc/: __init__.py  function.json
ask_rag/: new.py  products.json  utils.py
data/: test_qa.json
docs/: REGULAMIN.docx
eval/: checking_questions.py  evaluate_answers.py  generate_model_answers.py  model_answers.json  report_generation.py  result.json  scored_answers.json
hurt_bot_func/: __init__.py
src/: api.py  app.py  ask_rag.py  calc_materials.py  frontend.py  ingest_all.py  nlp_utils.py  products_index_creator
tests/: test_ask_rag.py  test_nlp_utils.py
