[project]
name = "hurtbot"
version = "0.1.0"
description = "Inteligentny Doradca Klienta dla Hurtowni B2B"
authors = [
    {name = "Aleksei Chovzhik"},
    {name = "Błażej Ostrowski"}
]
dependencies = [
    "fastapi>=0.104.0",
    "streamlit>=1.34.0",
    "pytest>=7.4.3",
    "ruff>=0.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["hurtbot"] 