[project]
name = "hurtbot"
version = "0.1.0"
description = "Inteligentny Doradca Klienta dla Hurtowni B2B"
authors = [
    {name = "Aleksei Chovzhik"},
    {name = "Błażej Ostrowski"}
]
dependencies = [
    "fastapi>=0.104.0",
    "streamlit>=1.34.0",
    "azure-core>=1.28.0",
    "azure-identity==1.14.0",
    "azure-search-documents==11.4.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    "openai>=1.66.3",
    "requests==2.32.4",
    "python-dotenv==1.0.0",
    "azure-functions==1.23.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=25.1.0",
    "ruff>=0.3.0",
    "types-requests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["hurtbot"] 

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
strict = true